platform-config/templates/network-policy/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: REPLACE_NAMESPACE
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
